backend/src/main/java/com/example/shop/common/error/OptimisticLockingException.java
package com.example.shop.common.error;

public class OptimisticLockingException extends RuntimeException {
    public OptimisticLockingException(String message) {
        super(message);
    }
}
